# slope64-py

./: .gitignore  README.md  pyproject.toml  validate_all.py
examples/: ex1.res  ex2.res  ex3.res  ex4.res  ex5.res  ex6.res  ex7.res
slope64/: __init__.py  cli.py  elements.py  material.py  mesh.py  output.py  parser.py  solver.py  srf.py  water.py
tests/: test_parser.py
